--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,4 +9,14 @@
   tags:
     - modprobe
 
+- name: Write modules config
+  template:
+    src: config.j2
+    dest: /etc/modules
+    owner: root
+    group: root
+    mode: u=rw,g=r,o=r
+  tags:
+    - modprobe
+
 ...
