--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,10 +3,11 @@
 # @meta author:value: [Thomas Boerger](https://github.com/tboerger)
 # @meta description: >
 # [![Source Code](https://img.shields.io/badge/github-source%20code-blue?logo=github&logoColor=white)](https://github.com/rolehippie/modprobe)
-# [![Testing Build](https://github.com/rolehippie/modprobe/workflows/testing/badge.svg)](https://github.com/rolehippie/modprobe/actions?query=workflow%3Atesting)
-# [![Readme Build](https://github.com/rolehippie/modprobe/workflows/readme/badge.svg)](https://github.com/rolehippie/modprobe/actions?query=workflow%3Areadme)
-# [![Galaxy Build](https://github.com/rolehippie/modprobe/workflows/galaxy/badge.svg)](https://github.com/rolehippie/modprobe/actions?query=workflow%3Agalaxy)
+# [![General Workflow](https://github.com/rolehippie/modprobe/actions/workflows/general.yml/badge.svg)](https://github.com/rolehippie/modprobe/actions/workflows/general.yml)
+# [![Readme Workflow](https://github.com/rolehippie/modprobe/actions/workflows/readme.yml/badge.svg)](https://github.com/rolehippie/modprobe/actions/workflows/readme.yml)
+# [![Galaxy Workflow](https://github.com/rolehippie/modprobe/actions/workflows/galaxy.yml/badge.svg)](https://github.com/rolehippie/modprobe/actions/workflows/galaxy.yml)
 # [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/modprobe)](https://github.com/rolehippie/modprobe/blob/master/LICENSE)
+# [![Ansible Role](https://img.shields.io/ansible/role/51491)](https://galaxy.ansible.com/rolehippie/modprobe)
 #
 # Ansible role to load or unload kernel modules.
 #
@@ -21,12 +22,13 @@ galaxy_info:
   author: Thomas Boerger
   description: Ansible role to load or unload kernel modules
   license: Apache-2.0
-  min_ansible_version: 2.10
+  min_ansible_version: "2.10"
   platforms:
     - name: Ubuntu
       versions:
         - bionic
         - focal
+        - jammy
   galaxy_tags:
     - kernel
     - modules
