--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,7 +1,7 @@
 ---
 - name: Prepare
   hosts: all
-  gather_facts: False
+  gather_facts: false
 
   tasks:
     - name: Stat apt dir
@@ -11,13 +11,13 @@
 
     - name: Wait for aptlock
       when: aptdir.stat.exists
-      changed_when: False
+      changed_when: false
       ansible.builtin.shell:
         cmd: while fuser /var/lib/apt/lists/lock >/dev/null 2>&1; do echo 'Waiting for apt list lock.' && sleep 10; done
 
     - name: Update package cache
       when: aptdir.stat.exists
       ansible.builtin.apt:
-        update_cache: True
+        update_cache: true
 
 ...
